Refactor: fix Java warnings (#45)